objects/Meeting_Utilization__c.object
<CustomObject>
    <fields>
        <fullName>ABC_Contact_Counter_ID__c</fullName>
        <formula>ABC_Contact__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC Contact Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABC Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Utilization (ABC Contact)</relationshipLabel>
        <relationshipName>Meeting_Utilization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <formula>if( Membership__c =&quot;&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>CEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>CXO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Historical_Linker__c</fullName>
        <formula>Contact__r.Historical_Linker__c</formula>
        <label>Contact Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Utilization (Contact)</relationshipLabel>
        <relationshipName>Meeting_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Contact_ID__c</fullName>
        <formula>Contact__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Confirmation__c</fullName>
        <description>Created as a part of CR-6280. To be used to track confirmation of attendance to meetings two weeks out in a bid to monitor drop off rates.</description>
        <label>Date of Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <label>EventID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation question: Applying the ideas from this content will yield financial value for my organization.</inlineHelpText>
        <label>Financial Impact Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_Counter_ID__c</fullName>
        <formula>Institution__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Utilization (Institution)</relationshipLabel>
        <relationshipName>Meeting_Utilization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Main Point of Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Meeting Utilizations</relationshipLabel>
        <relationshipName>Meeting_Utilizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Meeting_Evaluation__c</fullName>
        <description>Created for CR-20150508-8944.</description>
        <label>Overall Meeting Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParticipationCount__c</fullName>
        <label>ParticipationCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer_Institution_Counter_ID__c</fullName>
        <formula>Payer_Institution__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Institution Counter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Payer Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Utilization (Payer Institution)</relationshipLabel>
        <relationshipName>Meeting_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Utilization__c</fullName>
        <formula>if(  Institution__r.Name  = Membership__r.Active_Contract_Payer_Account_Name__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Utilization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: Applying the ideas from this content will advance our performance against key organizational goals.</inlineHelpText>
        <label>Performance Improvement Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Effectiveness_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: applying the ideas from this content will make me more effective at my job.</inlineHelpText>
        <label>Personal Effectiveness Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Decisions_Value_Score__c</fullName>
        <description>Created for CR-20160303-9666.</description>
        <inlineHelpText>Evaluation Question: Applying the ideas from this content will improve the quality of my strategic decisions.</inlineHelpText>
        <label>Strategic Decisions Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsert_ID__c</fullName>
        <externalId>true</externalId>
        <label>Upsert ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utilization_Metric__c</fullName>
        <label>Utilization Metric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meeting Utilization</label>
    <nameField>
        <label>Meeting Utilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Utilization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>